<resources>
    <string name="app_name">Meal Plan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Meal Plan</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_meals">Meals</string>
    <string name="menu_meal_components">Meal Components</string>
    <string name="noMeals">You don\'t appear to have any meals, press the button in the bottom right to make one</string>
    <string name="textName">Name</string>
    <string name="Quantifiable">Quantifiable</string>
    <string name="dialog_newmeal">New Meal</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="textAmount">Quantity</string>
    <string name="noComponents">You don\'t appear to have any meal components, you can add some with the button in the bottom right</string>
    <string name="set">Set</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="snack_bar_text">Did you mean to delete that?</string>
    <string name="description">Description</string>
    <string name="menu_make_meal_components">Components</string>
    <string name="steps">Steps</string>
    <string name="step">Step</string>
    <string name="stepFormatted">Step %1$d</string>
    <string name="remove_step">Remove Step</string>
    <string name="add_step">Add Step</string>
    <string name="tooFewSteps">You must have atleast 1 step</string>
    <string name="units">Units</string>
    <string name="unitsDisplay">%1$s%2$s</string>
    <string name="mustName">The component must have a name.</string>
    <string name="itemDeleted">ITEM MISSING</string>
    <string name="action_settings_delete_meals">Delete All Meals</string>
    <string name="action_delete_components">Delete All Components</string>
    <string name="deleteAll">Delete all %1$s</string>
    <string name="areYouSure">Are you sure you want to delete all your %1$s?</string>
    <string name="meals">meals?</string>
    <string name="components">components</string>
</resources>
