<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/baseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textName"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textMealName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textAmount"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/SwitchQuantifiable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/Quantifiable"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/quantityHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/PickerAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0pt"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/units"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/units"
                android:inputType="none|text"
                android:importantForAutofill="no" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>